--- a/Hardstuck.GuildWars2.MumbleLink.csproj
+++ b/Hardstuck.GuildWars2.MumbleLink.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;netstandard2.0</TargetFrameworks>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>HardstuckGuild (DeltaxHunter &amp; Plenyx)</Authors>
     <Copyright>Apache 2</Copyright>
