--- a/Hardstuck.GuildWars2.MumbleLink.csproj
+++ b/Hardstuck.GuildWars2.MumbleLink.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;netstandard2.0</TargetFrameworks>
@@ -48,7 +48,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Hardstuck.GuildWars2" Version="1.0.4" />
+    <PackageReference Include="Hardstuck.GuildWars2" Version="1.0.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
