--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: publish to nuget
 on:
   push:
     branches:
-      - master # Default release branch
+      - main # Default release branch
 jobs:
   publish:
     name: build, pack & publish
@@ -16,16 +16,16 @@ jobs:
         with:
           # Filepath of the project to be packaged, relative to root of repository
           PROJECT_FILE_PATH: Hardstuck.GuildWars2.MumbleLink.csproj
-          
+
           # NuGet package id, used for version detection & defaults to project name
           PACKAGE_NAME: Hardstuck.GuildWars2.MumbleLink
-          
+
           # Filepath with version info, relative to root of repository & defaults to PROJECT_FILE_PATH
           # VERSION_FILE_PATH: Directory.Build.props
 
           # Regex pattern to extract version info in a capturing group
           # VERSION_REGEX: ^\s*<Version>(.*)<\/Version>\s*$
-          
+
           # Useful with external providers like Nerdbank.GitVersioning, ignores VERSION_FILE_PATH & VERSION_REGEX
           # VERSION_STATIC: latest
 
